# scribble-battleships

./: .gitignore  .gitmodules  Arithmetic.scr  Game.scr  LICENSE  README.md  bower.json  package.json
config/: webpack.config.dev.js
public/: index.html
server/: server.cabal
server/src/: Main.hs
server/src/Data/Aeson/Encoding/: Scribble.hs
server/src/Server/: BattleShips.hs  Math.hs
src/: Main.purs  index.js
src/Purescript/: bower.json
src/Purescript/src/: Main.purs
src/Scribble/: Concur.purs
src/Scribble/Protocol/Arithmetic/: MathServer.purs
web/: .gitignore  bower.json  package-lock.json  package.json  packages.dhall  spago.dhall
web/config/: webpack.config.prod.js
web/public/: index.html
web/src/: Main.purs
web/src/Game/: BattleShips.purs
web/src/Game/BattleShips/: Types.purs
web/src/Scribble/Protocol/Arithmetic/: MathServer.purs
web/src/Scribble/Protocol/Game/: BattleShips.purs
