name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonathanlking/scribble-battleships#readme
license:             BSD3
author:              Jonathan King
maintainer:          jonathanlking@me.com
copyright:           2019 Jonathan King
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  other-modules:       Server.Math
                     , Server.BattleShips
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , websockets
                     , text
                     , warp
                     , wai-app-static
                     , aeson
                     , containers
                     , concurrent-extra
                     , generic-lens
                     , lens
                     , async
                     , lens-aeson
                     , string-conversions
                     , vector
                     , random
